% bar fixed in total

--- a/quiz.html
+++ b/quiz.html
@@ -23,10 +23,10 @@
         <h1 id = 'site-name'>FRONTEND DEVELOPER QUIZ</h1>
         <div id ='loading'>
             <div id = 'loadingbox'>
-                <div id = 'loadbar'> 
+                <div id = 'loadbar'> </div>
+                <span id = 'percentage'>%</span>
                 <!-- <div ></div> -->
-                    <span id = 'percentage'>%</span>
-                </div>
+                
             
             </div>
         </div>
