--- a/quiz.html
+++ b/quiz.html
@@ -15,7 +15,7 @@
 <body>
     <div>
         <header class="header" >
-            <button id = 'nesto'>Play again</button>
+            <button id = 'reset'>Play again</button>
             <div id ='ime-takmicara'>Marko Veljkovic</div>
         </header>
     </div>
@@ -34,11 +34,11 @@
     <div class="questions">
         <div id="q_html" >
             <H2>HTML</H2>
-            <button id="htmlQ--0">Question 1</button>
-            <button id="htmlQ--1">Question 2</button>
-            <button id="htmlQ--2">Question 3</button>
-            <button id="htmlQ--3">Question 4</button>
-            <button id="htmlQ--4">Question 5</button>
+            <button>Question 1</button>
+            <button>Question 2</button>
+            <button>Question 3</button>
+            <button>Question 4</button>
+            <button>Question 5</button>
         </div>
         <div id="q_css" >
             <H2>CSS</H2>
@@ -71,7 +71,7 @@
     </div>
     <div id="question_pop" class="hidden">
         <H3>Pitanje br</H3>
-        <p id="pitanje">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        <p id="question">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Quis consectetur eius, velit ratione voluptas enim totam
              aut est nemo quaerat mollitia animi, quasi omnis maxime,
               natus temporibus? Minus, saepe voluptatibus.</p>
