--- a/quiz.html
+++ b/quiz.html
@@ -19,6 +19,7 @@
             <div id ='ime-takmicara'>Marko Veljkovic</div>
         </header>
     </div>
+    <div class="container">
     <div >
         <h1 id = 'site-name'>FRONTEND DEVELOPER QUIZ</h1>
         <div id ='loading'>
@@ -69,6 +70,7 @@
             </div>
         </div>
     </div>
+</div>
     <div id="question_pop" class="hidden">
         <H3>Pitanje br</H3>
         <p id="question">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
