--- a/quiz.html
+++ b/quiz.html
@@ -16,7 +16,7 @@
     <div>
         <header class="header" >
             <button id = 'reset'>Play again</button>
-            <div id ='ime-takmicara'>Marko Veljkovic</div>
+            <div id ='contestorName'></div>
         </header>
     </div>
     <div class="container">
