bug fixed with HTML entities

--- a/quiz.html
+++ b/quiz.html
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div id="question_pop" class="hidden">
-      <h3>Pitanje br</h3>
+      <h3>Question:</h3>
       <p id="question">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
         consectetur eius, velit ratione voluptas enim totam aut est nemo quaerat
